--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,18 @@
 .container{
-    display:flex;
+    display : flex;
     flex-direction : column;
+    width : 500px;
+    height : 500px;
 }
 .rowContainer{
     display : flex;
+    flex-grow : 1;
     flex-direction : row;
-    justify-content : space-around;
+}
+.colorDiv{
+    border : 1px solid black;
+    flex-grow : 1
+}
+.selected{
+    background-color : red;
 }
